fixed mobile hamburger floating issue on safari and fixed mobile button sizes

--- a/src/components/Mobile/SmallArticleCard/SmallArticleCard.css
+++ b/src/components/Mobile/SmallArticleCard/SmallArticleCard.css
@@ -22,6 +22,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   padding: 15px 0px 5px 0px;
 }
 
@@ -48,7 +49,7 @@
   align-items: center;
   justify-content: center;
   background-color: #00ff85;
-  min-height: 35px;
+  height: 35px;
   width: 60px;
   font-size: 18px;
 }
